tests/tests/snapshots/golden__gen__rust__typed-handlers.snap
---
source: tests/tests/golden.rs
expression: project_dump(&project)
---
============================================================
.dockerignore
============================================================
/target
============================================================
.gitignore
============================================================
/target
============================================================
Cargo.toml
============================================================
[package]
name = "video-vault"
version = "0.1.0"
edition = "2021"
description = "Generated by CIaC from `service VideoVault`"

[dependencies]
anyhow = "1"
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "json"] }
rust-s3 = "0.35"
thiserror = "2"
============================================================
Dockerfile
============================================================
FROM rust:1-slim AS build

WORKDIR /src
COPY . .
RUN cargo build --release

FROM debian:stable-slim

COPY --from=build /src/target/release/video-vault /usr/local/bin/app

EXPOSE 8000
CMD ["app"]
============================================================
README.md
============================================================
# VideoVault

Generated by [CIaC](https://github.com/jrcalgo/ciac) — do not edit the
compiler-owned wiring by hand; regenerate it from the `.ciac` source
instead. Business logic lives in `src/services/`, which is yours.

## Run

```sh
cargo run
```

Or bring up the full stack (API, Postgres):

```sh
docker compose up --build
```

## Layout

| Path | Purpose | Owner |
|------|---------|-------|
| `src/main.rs` | Application assembly | compiler |
| `src/routes/` | HTTP routers (one per api) | compiler |
| `src/services/` | Business-logic handlers | **you** |
| `src/workers/` | Queue consumers and scheduled jobs | compiler |
| `src/config.rs` | Environment-driven settings | compiler |
============================================================
docker-compose.yml
============================================================
services:
  app:
    build: .
    ports:
      - "8000:8000"
    healthcheck:
      test: ["CMD", "bash", "-c", "exec 3<>/dev/tcp/127.0.0.1/8000"]
      interval: 1s
      timeout: 3s
      retries: 30
    environment:
      DATABASE_URL: postgres://postgres:postgres@db:5432/video_vault
      S3_ENDPOINT: http://minio:9000
    depends_on:
      db:
        condition: service_healthy
      minio:
        condition: service_started

  db:
    image: postgres:16
    ports:
      - "5432:5432"
    environment:
      POSTGRES_PASSWORD: postgres
      POSTGRES_DB: video_vault
    volumes:
      - db-data:/var/lib/postgresql/data
    healthcheck:
      test: ["CMD-SHELL", "pg_isready -U postgres"]
      interval: 2s
      timeout: 3s
      retries: 20

  minio:
    image: minio/minio
    command: ["server", "/data"]
    environment:
      MINIO_ROOT_USER: minioadmin
      MINIO_ROOT_PASSWORD: minioadmin
    volumes:
      - minio-data:/data

volumes:
  db-data:
  minio-data:
============================================================
src/config.rs
============================================================
//! Runtime configuration for VideoVault. Generated by CIaC.
//!
//! Every value can be overridden through the environment, e.g.
//! `DATABASE_URL`; defaults target local development.

#[derive(Debug, Clone)]
pub struct Config {
    pub database_url: String,
    pub s3_endpoint: String,
    pub s3_access_key: String,
    pub s3_secret_key: String,
    pub s3_bucket: String,
    pub s3_region: String,
}

impl Config {
    pub fn from_env() -> Self {
        Self {
            database_url: env_or(
                "DATABASE_URL",
                "postgres://postgres:postgres@localhost:5432/video_vault",
            ),
            s3_endpoint: env_or("S3_ENDPOINT", "http://localhost:9000"),
            s3_access_key: env_or("S3_ACCESS_KEY", "minioadmin"),
            s3_secret_key: env_or("S3_SECRET_KEY", "minioadmin"),
            s3_bucket: env_or("S3_BUCKET", "default"),
            s3_region: env_or("S3_REGION", "us-east-1"),
        }
    }
}

fn env_or(key: &str, default: &str) -> String {
    std::env::var(key).unwrap_or_else(|_| default.to_owned())
}
============================================================
src/db.rs
============================================================
//! Database schema management. Generated by CIaC.


============================================================
src/error.rs
============================================================
//! Request error handling. Generated by CIaC.

use axum::http::StatusCode;
use axum::response::{IntoResponse, Response};

/// Route-level error: any `?`-propagated failure becomes a 500 with the
/// cause logged, and helpers construct intentional client errors.
#[derive(Debug)]
pub struct AppError {
    status: StatusCode,
    source: Option<anyhow::Error>,
}

impl AppError {
    pub fn not_found() -> Self {
        Self {
            status: StatusCode::NOT_FOUND,
            source: None,
        }
    }

    pub fn forbidden() -> Self {
        Self {
            status: StatusCode::FORBIDDEN,
            source: None,
        }
    }
}

impl IntoResponse for AppError {
    fn into_response(self) -> Response {
        if let Some(source) = &self.source {
            tracing::error!(error = ?source, "request failed");
        }
        let message = self
            .status
            .canonical_reason()
            .unwrap_or("error")
            .to_ascii_lowercase();
        (self.status, message).into_response()
    }
}

impl<E> From<E> for AppError
where
    E: Into<anyhow::Error>,
{
    fn from(err: E) -> Self {
        Self {
            status: StatusCode::INTERNAL_SERVER_ERROR,
            source: Some(err.into()),
        }
    }
}
============================================================
src/lib.rs
============================================================
//! VideoVault — generated by CIaC.
//!
//! Compiler-owned wiring lives at the crate root and in `routes`/`workers`;
//! business logic belongs in `services`, which is yours.

pub mod config;
pub mod error;
pub mod observability;
pub mod routes;
pub mod state;
pub mod db;
pub mod models;
pub mod object_store;
pub mod schemas;
pub mod services;
pub mod logic;
============================================================
src/logic/mod.rs
============================================================
//! Compiler-owned typed-handler logic, lowered from `.ciac` handler
//! bodies. Regenerated on every build; business logic lives in the
//! `.ciac` source, not here.

pub mod store_video;
============================================================
src/logic/store_video.rs
============================================================
//! Handler for the `StoreVideo` typed handler. Generated by CIaC.
//!
//! Compiler-owned: lowered from the source `handler StoreVideo(..) { .. }` body
//! on every build. Business logic lives in the `.ciac` source, not here.
use crate::state::AppState;
use crate::schemas::{ Video, VideoStatus };
#[derive(Debug)]
pub struct StoreVideo<'a> {
    pub db: &'a sqlx::PgPool,
    pub object_store: &'a crate::object_store::ObjectStore,
}

impl<'a> StoreVideo<'a> {
    pub fn new(state: &'a AppState) -> Self {
        Self {
            db: &state.db,
            object_store: &state.object_store,
        }
    }

    // An unused `let` is a warning in the source language (`CIAC0045`),
    // not an error — a well-typed handler body can bind a value it
    // never reads. Rust's own `unused_variables` lint disagrees, so it's
    // allowed here rather than promoted to a hard failure by `-D warnings`.
    #[allow(unused_variables)]
    pub async fn handle(&self, v: Video) -> anyhow::Result<Video> {
self.object_store.put(&format!("{}{}", "videos/".to_owned(), v.id), &serde_json::to_vec(&v)?).await?;
let v1 = {
    let __row = v.clone();
    sqlx::query("INSERT INTO videos (id, title, status) VALUES ($1, $2, $3)")
        .bind(&__row.id)
        .bind(&__row.title)
        .bind(__row.status.as_str())
        .execute(self.db)
        .await?;
    __row
};
let v2 = if v1.status == VideoStatus::Pending {
    Video { status: VideoStatus::Ready, ..v1 }
} else {
    v1
};
return Ok(v2);
    }
}
============================================================
src/main.rs
============================================================
use video_vault::{config::Config, routes, state::AppState};

#[tokio::main]
async fn main() -> anyhow::Result<()> {
    video_vault::observability::init();
    let config = Config::from_env();
    let state = AppState::new(config).await?;
    sqlx::migrate!("./migrations").run(&state.db).await?;
    let app = routes::router().with_state(state);
    let listener = tokio::net::TcpListener::bind(("0.0.0.0", 8000)).await?;
    tracing::info!("listening on 0.0.0.0:8000");
    axum::serve(listener, app).await?;
    Ok(())
}
============================================================
src/models.rs
============================================================
//! Persistence models and API schemas for CRUD resources and `table`
//! declarations. Generated by CIaC.
//!
//! Typed resources (`crud X: Record;`) get real columns from their record;
//! untyped ones keep a generic keyed-document model (UUID key + JSON
//! payload). `table <Name>: <Record>;` declarations (v0.7) get the same
//! column treatment, named after the table so a record reused under
//! several table names doesn't collide. Enums are stored as text.

use serde::{Deserialize, Serialize};

use crate::schemas::Video;


#[derive(Debug, Clone, Serialize, Deserialize, sqlx::FromRow)]
pub struct Videos {
    pub id: String,
    pub title: String,
    pub status: String,
}

impl TryFrom<Videos> for Video {
    type Error = anyhow::Error;

    fn try_from(row: Videos) -> anyhow::Result<Self> {
        Ok(Video {
            id: row.id,
            title: row.title,
            status: crate::schemas::VideoStatus::from_str(&row.status)?,
        })
    }
}

============================================================
src/object_store.rs
============================================================
//! S3 object storage client. Generated by CIaC.
//!
//! Each named `object_store` instance gets a client on `AppState`.
//! Defaults target a local MinIO from the generated docker-compose; point
//! the `S3_*` environment variables at real S3 in production.

use s3::creds::Credentials;
use s3::{Bucket, Region};

/// One S3 bucket, addressed path-style so MinIO works out of the box.
///
/// Holds configuration only; the underlying client is built per call, so
/// the server starts (and compiles) without a running object store.
#[derive(Debug, Clone)]
pub struct ObjectStore {
    pub endpoint: String,
    pub access_key: String,
    pub secret_key: String,
    pub bucket: String,
    pub region: String,
}

impl ObjectStore {
    fn bucket(&self) -> anyhow::Result<Box<Bucket>> {
        let credentials = Credentials::new(
            Some(&self.access_key),
            Some(&self.secret_key),
            None,
            None,
            None,
        )?;
        let region = Region::Custom {
            region: self.region.clone(),
            endpoint: self.endpoint.clone(),
        };
        Ok(Bucket::new(&self.bucket, region, credentials)?.with_path_style())
    }

    pub async fn put(&self, key: &str, body: &[u8]) -> anyhow::Result<()> {
        self.bucket()?.put_object(key, body).await?;
        Ok(())
    }

    pub async fn get(&self, key: &str) -> anyhow::Result<Vec<u8>> {
        let response = self.bucket()?.get_object(key).await?;
        Ok(response.to_vec())
    }

    pub async fn delete(&self, key: &str) -> anyhow::Result<()> {
        self.bucket()?.delete_object(key).await?;
        Ok(())
    }

    pub async fn presign_get(&self, key: &str, expires_s: u32) -> anyhow::Result<String> {
        Ok(self.bucket()?.presign_get(key, expires_s, None).await?)
    }
}
============================================================
src/observability.rs
============================================================
//! Observability wiring. Generated by CIaC.

pub fn init() {
    let filter = tracing_subscriber::EnvFilter::try_from_default_env()
        .unwrap_or_else(|_| tracing_subscriber::EnvFilter::new("info"));
    tracing_subscriber::fmt().with_env_filter(filter).init();
}
============================================================
src/routes/mod.rs
============================================================
//! HTTP routing. Generated by CIaC.

pub mod upload;

use axum::routing::get;
use axum::{Json, Router};

use crate::state::AppState;

pub fn router() -> Router<AppState> {
    Router::new()
        .route("/health", get(health))
        .merge(upload::router())
}

async fn health() -> Json<serde_json::Value> {
    Json(serde_json::json!({"status": "ok"}))
}

============================================================
src/routes/upload.rs
============================================================
//! Request pipeline for `api Upload`. Generated by CIaC.
//!
//! Pipeline: StoreVideo -> Notify -> Return


use axum::extract::State;
use axum::routing::post;
use axum::{Json, Router};

use crate::error::AppError;
use crate::schemas::Video;
use crate::logic::store_video::StoreVideo;
use crate::services::notify::Notify;
use crate::state::AppState;

pub fn router() -> Router<AppState> {
    Router::new().route("/videos", post(upload))
}

async fn upload(
    State(state): State<AppState>,
    Json(payload): Json<Video>,
) -> Result<Json<serde_json::Value>, AppError> {
    let result = payload;

    let result = StoreVideo::new(&state).handle(result).await?;
    let result = Notify::new(&state).handle(result).await?;
    Ok(Json(serde_json::json!({"status": "accepted", "data": result})))
}
============================================================
src/schemas.rs
============================================================
//! Data schemas from the program's `record` declarations. Generated by CIaC.

use serde::{Deserialize, Serialize};


#[derive(Debug, Clone, Copy, PartialEq, Eq, Serialize, Deserialize)]
pub enum VideoStatus {
    Pending,
    Ready,
}

impl VideoStatus {
    /// The wire/storage form of the variant.
    pub fn as_str(&self) -> &'static str {
        match self {
            VideoStatus::Pending => "Pending",
            VideoStatus::Ready => "Ready",
        }
    }

    /// The reverse of `as_str` — reconstructs the variant from a
    /// database/wire string, e.g. after `db.get` reads a `table`'s
    /// enum column back as plain text.
    pub fn from_str(s: &str) -> anyhow::Result<Self> {
        match s {
            "Pending" => Ok(VideoStatus::Pending),
            "Ready" => Ok(VideoStatus::Ready),
            other => Err(anyhow::anyhow!("invalid VideoStatus: {other}")),
        }
    }
}

#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct Video {
    pub id: String,
    pub title: String,
    pub status: VideoStatus,
}


#[derive(Debug, Clone, thiserror::Error)]
#[error("NotFound(id={id:?})")]
pub struct NotFound {
    pub id: String,
}

============================================================
src/services/mod.rs
============================================================
//! Business-logic handlers. Generated once by CIaC — this is where your
//! code goes.

pub mod notify;
============================================================
src/services/notify.rs
============================================================
//! Stub for the `Notify` handler declared `extern`. Generated by CIaC.
//!
//! This file is yours: implement `handle` with your own logic. The
//! signature is compiler-owned and regenerated to match the `extern
//! handler Notify(..) -> ..;` declaration.
use crate::state::AppState;
use crate::schemas::{ Video };
#[derive(Debug)]
pub struct Notify {
}

impl Notify {
    pub fn new(_state: &AppState) -> Self {
        Self {}
    }

    // An unused `let` is a warning in the source language (`CIAC0045`),
    // not an error — a well-typed handler body can bind a value it
    // never reads. Rust's own `unused_variables` lint disagrees, so it's
    // allowed here rather than promoted to a hard failure by `-D warnings`.
    #[allow(unused_variables)]
    pub async fn handle(&self, v: Video) -> anyhow::Result<Video> {
Err(anyhow::anyhow!("not implemented"))
    }
}
============================================================
src/state.rs
============================================================
//! Shared application state. Generated by CIaC.

use crate::config::Config;

#[derive(Debug, Clone)]
pub struct AppState {
    pub config: Config,
    /// Lazy pool: connections are established on first use, so the server
    /// starts (and compiles) without a running database.
    pub db: sqlx::PgPool,
    pub object_store: crate::object_store::ObjectStore,
}

impl AppState {
    pub async fn new(config: Config) -> anyhow::Result<Self> {
        let db =
            sqlx::postgres::PgPoolOptions::new().connect_lazy(&config.database_url)?;
        let object_store = crate::object_store::ObjectStore {
            endpoint: config.s3_endpoint.clone(),
            access_key: config.s3_access_key.clone(),
            secret_key: config.s3_secret_key.clone(),
            bucket: config.s3_bucket.clone(),
            region: config.s3_region.clone(),
        };
        Ok(Self {
            config,
            db,
            object_store,
        })
    }
}
