tests/tests/snapshots/golden__gen__rust__video-platform.snap
---
source: tests/tests/golden.rs
expression: project_dump(&project)
---
============================================================
.gitignore
============================================================
/target
============================================================
Cargo.toml
============================================================
[package]
name = "video-platform"
version = "0.1.0"
edition = "2021"
description = "Generated by CIaC from `service VideoPlatform`"

[dependencies]
anyhow = "1"
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "json"] }
redis = { version = "0.27", features = ["tokio-comp"] }
async-nats = "0.38"
futures = "0.3"
jsonwebtoken = "9"
============================================================
Dockerfile
============================================================
FROM rust:1-slim AS build

WORKDIR /src
COPY . .
RUN cargo build --release

FROM debian:stable-slim

COPY --from=build /src/target/release/video-platform /usr/local/bin/app
COPY --from=build /src/target/release/workers /usr/local/bin/workers

EXPOSE 8000
CMD ["app"]
============================================================
README.md
============================================================
# VideoPlatform

Generated by [CIaC](https://github.com/jrcalgo/ciac) — do not edit the
compiler-owned wiring by hand; regenerate it from the `.ciac` source
instead. Business logic lives in `src/services/`, which is yours.

## Run

```sh
cargo run
```

Workers run separately:

```sh
cargo run --bin workers
```

Or bring up the full stack (API, workers, Postgres, Redis, NATS):

```sh
docker compose up --build
```

## Layout

| Path | Purpose | Owner |
|------|---------|-------|
| `src/main.rs` | Application assembly | compiler |
| `src/routes/` | HTTP routers (one per api) | compiler |
| `src/services/` | Business-logic handlers | **you** |
| `src/workers/` | Queue consumers | compiler |
| `src/config.rs` | Environment-driven settings | compiler |

Requests to protected routes need a bearer token signed with
`JWT_SECRET` (default `change-me`, algorithm HS256).
============================================================
docker-compose.yml
============================================================
services:
  app:
    build: .
    ports:
      - "8000:8000"
    environment:
      DATABASE_URL: postgres://postgres:postgres@db:5432/video_platform
      REDIS_URL: redis://cache:6379/0
      NATS_URL: nats://queue:4222
      JWT_SECRET: ${JWT_SECRET:-change-me}
    depends_on:
      - db
      - cache
      - queue

  workers:
    build: .
    command: ["workers"]
    environment:
      DATABASE_URL: postgres://postgres:postgres@db:5432/video_platform
      REDIS_URL: redis://cache:6379/0
      NATS_URL: nats://queue:4222
    depends_on:
      - db
      - cache
      - queue

  db:
    image: postgres:16
    environment:
      POSTGRES_PASSWORD: postgres
      POSTGRES_DB: video_platform
    volumes:
      - db-data:/var/lib/postgresql/data

  cache:
    image: redis:7

  queue:
    image: nats:2

volumes:
  db-data:
============================================================
src/auth.rs
============================================================
//! JWT authentication. Generated by CIaC.
//!
//! `Auth` pipeline steps become the [`Claims`] extractor: routes that take
//! a `Claims` argument reject requests without a valid bearer token.

use axum::extract::FromRequestParts;
use axum::http::header::AUTHORIZATION;
use axum::http::{request::Parts, StatusCode};
use jsonwebtoken::{Algorithm, DecodingKey, Validation};

use crate::error::AppError;
use crate::state::AppState;

/// Verified JWT claims of the current request.
#[derive(Debug, Clone)]
pub struct Claims(pub serde_json::Value);

impl Claims {
    /// The `sub` claim, if present.
    pub fn subject(&self) -> Option<&str> {
        self.0.get("sub").and_then(|v| v.as_str())
    }

    pub fn require_scope(&self, scope: &str) -> Result<(), AppError> {
        let has_scope = self
            .0
            .get("scope")
            .and_then(|value| value.as_str())
            .is_some_and(|scopes| scopes.split_whitespace().any(|item| item == scope))
            || self
                .0
                .get("scp")
                .and_then(|value| value.as_array())
                .is_some_and(|scopes| scopes.iter().any(|item| item.as_str() == Some(scope)));
        if has_scope {
            Ok(())
        } else {
            Err(AppError::forbidden())
        }
    }
}

impl FromRequestParts<AppState> for Claims {
    type Rejection = (StatusCode, &'static str);

    async fn from_request_parts(
        parts: &mut Parts,
        state: &AppState,
    ) -> Result<Self, Self::Rejection> {
        let token = parts
            .headers
            .get(AUTHORIZATION)
            .and_then(|value| value.to_str().ok())
            .and_then(|value| value.strip_prefix("Bearer "))
            .ok_or((StatusCode::UNAUTHORIZED, "missing bearer token"))?;
        let mut validation = Validation::new(Algorithm::HS256);
        validation.required_spec_claims.clear();
        let data = jsonwebtoken::decode::<serde_json::Value>(
            token,
            &DecodingKey::from_secret(state.config.jwt_secret.as_bytes()),
            &validation,
        )
        .map_err(|_| (StatusCode::UNAUTHORIZED, "invalid or expired token"))?;
        Ok(Claims(data.claims))
    }
}
============================================================
src/bin/workers.rs
============================================================
//! Runs every worker in one process. Generated by CIaC.

use video_platform::{config::Config, state::AppState, workers};

#[tokio::main]
async fn main() -> anyhow::Result<()> {
    video_platform::observability::init();
    let config = Config::from_env();
    let state = AppState::new(config).await?;
    tokio::try_join!(
        workers::transcoder::run(state.clone()),
    )?;
    Ok(())
}
============================================================
src/config.rs
============================================================
//! Runtime configuration for VideoPlatform. Generated by CIaC.
//!
//! Every value can be overridden through the environment, e.g.
//! `DATABASE_URL`; defaults target local development.

#[derive(Debug, Clone)]
pub struct Config {
    pub database_url: String,
    pub redis_url: String,
    pub nats_url: String,
    pub jwt_secret: String,
}

impl Config {
    pub fn from_env() -> Self {
        Self {
            database_url: env_or(
                "DATABASE_URL",
                "postgres://postgres:postgres@localhost:5432/video_platform",
            ),
            redis_url: env_or("REDIS_URL", "redis://localhost:6379/0"),
            nats_url: env_or("NATS_URL", "nats://localhost:4222"),
            jwt_secret: env_or("JWT_SECRET", "change-me"),
        }
    }
}

fn env_or(key: &str, default: &str) -> String {
    std::env::var(key).unwrap_or_else(|_| default.to_owned())
}
============================================================
src/error.rs
============================================================
//! Request error handling. Generated by CIaC.

use axum::http::StatusCode;
use axum::response::{IntoResponse, Response};

/// Route-level error: any `?`-propagated failure becomes a 500 with the
/// cause logged, and helpers construct intentional client errors.
#[derive(Debug)]
pub struct AppError {
    status: StatusCode,
    source: Option<anyhow::Error>,
}

impl AppError {
    pub fn not_found() -> Self {
        Self {
            status: StatusCode::NOT_FOUND,
            source: None,
        }
    }

    pub fn forbidden() -> Self {
        Self {
            status: StatusCode::FORBIDDEN,
            source: None,
        }
    }
}

impl IntoResponse for AppError {
    fn into_response(self) -> Response {
        if let Some(source) = &self.source {
            tracing::error!(error = ?source, "request failed");
        }
        let message = self
            .status
            .canonical_reason()
            .unwrap_or("error")
            .to_ascii_lowercase();
        (self.status, message).into_response()
    }
}

impl<E> From<E> for AppError
where
    E: Into<anyhow::Error>,
{
    fn from(err: E) -> Self {
        Self {
            status: StatusCode::INTERNAL_SERVER_ERROR,
            source: Some(err.into()),
        }
    }
}
============================================================
src/lib.rs
============================================================
//! VideoPlatform — generated by CIaC.
//!
//! Compiler-owned wiring lives at the crate root and in `routes`/`workers`;
//! business logic belongs in `services`, which is yours.

pub mod config;
pub mod error;
pub mod observability;
pub mod routes;
pub mod state;
pub mod auth;
pub mod services;
pub mod workers;
============================================================
src/main.rs
============================================================
use video_platform::{config::Config, routes, state::AppState};

#[tokio::main]
async fn main() -> anyhow::Result<()> {
    video_platform::observability::init();
    let config = Config::from_env();
    let state = AppState::new(config).await?;
    let app = routes::router().with_state(state);
    let listener = tokio::net::TcpListener::bind(("0.0.0.0", 8000)).await?;
    tracing::info!("listening on 0.0.0.0:8000");
    axum::serve(listener, app).await?;
    Ok(())
}
============================================================
src/observability.rs
============================================================
//! Observability wiring. Generated by CIaC.

pub fn init() {
    let filter = tracing_subscriber::EnvFilter::try_from_default_env()
        .unwrap_or_else(|_| tracing_subscriber::EnvFilter::new("info"));
    tracing_subscriber::fmt().with_env_filter(filter).init();
}
============================================================
src/routes/mod.rs
============================================================
//! HTTP routing. Generated by CIaC.

pub mod upload;

use axum::routing::get;
use axum::{Json, Router};

use crate::state::AppState;

pub fn router() -> Router<AppState> {
    Router::new()
        .route("/health", get(health))
        .merge(upload::router())
}

async fn health() -> Json<serde_json::Value> {
    Json(serde_json::json!({"status": "ok"}))
}

============================================================
src/routes/upload.rs
============================================================
//! Request pipeline for `api Upload`. Generated by CIaC.
//!
//! Pipeline: Auth -> StoreVideo -> publish video_platform.events -> Return


use axum::extract::State;
use axum::routing::post;
use axum::{Json, Router};

use crate::auth::Claims;
use crate::error::AppError;
use crate::services::store_video::StoreVideo;
use crate::state::AppState;

pub fn router() -> Router<AppState> {
    Router::new().route("/upload", post(upload))
}

async fn upload(
    State(state): State<AppState>,
    claims: Claims,
    Json(payload): Json<serde_json::Value>,
) -> Result<Json<serde_json::Value>, AppError> {
    let mut result = payload;
    if let Some(object) = result.as_object_mut() {
        object.insert(
            "subject".to_owned(),
            claims
                .subject()
                .map(Into::into)
                .unwrap_or(serde_json::Value::Null),
        );
    }

    let result = StoreVideo::new(&state).handle(result).await?;
    state
        .queue
        .publish("video_platform.events", serde_json::to_vec(&result)?.into())
        .await?;
    Ok(Json(serde_json::json!({"status": "accepted", "data": result})))
}
============================================================
src/services/mod.rs
============================================================
//! Business-logic handlers. Generated once by CIaC — this is where your
//! code goes.

pub mod store_video;
pub mod transcode;
pub mod save_result;
============================================================
src/services/save_result.rs
============================================================
//! Handler for the `SaveResult` pipeline step. Generated by CIaC.
//!
//! This file is yours: the compiler wires `SaveResult` into
//! its pipelines, and you implement the business logic in `handle`.

use crate::state::AppState;

/// Business logic for the `SaveResult` step.
///
/// Capability bindings:
/// - db: default
/// - cache: default
#[derive(Debug)]
pub struct SaveResult<'a> {
    pub db: &'a sqlx::PgPool,
    pub cache: &'a redis::Client,
}

impl<'a> SaveResult<'a> {
    pub fn new(state: &'a AppState) -> Self {
        Self {
            db: &state.db,
            cache: &state.cache,
        }
    }

    pub async fn handle(&self, payload: serde_json::Value) -> anyhow::Result<serde_json::Value> {
        // TODO: implement the SaveResult step.
        Ok(payload)
    }
}
============================================================
src/services/store_video.rs
============================================================
//! Handler for the `StoreVideo` pipeline step. Generated by CIaC.
//!
//! This file is yours: the compiler wires `StoreVideo` into
//! its pipelines, and you implement the business logic in `handle`.

use crate::state::AppState;

/// Business logic for the `StoreVideo` step.
///
/// Capability bindings:
/// - db: default
/// - cache: default
#[derive(Debug)]
pub struct StoreVideo<'a> {
    pub db: &'a sqlx::PgPool,
    pub cache: &'a redis::Client,
}

impl<'a> StoreVideo<'a> {
    pub fn new(state: &'a AppState) -> Self {
        Self {
            db: &state.db,
            cache: &state.cache,
        }
    }

    pub async fn handle(&self, payload: serde_json::Value) -> anyhow::Result<serde_json::Value> {
        // TODO: implement the StoreVideo step.
        Ok(payload)
    }
}
============================================================
src/services/transcode.rs
============================================================
//! Handler for the `Transcode` pipeline step. Generated by CIaC.
//!
//! This file is yours: the compiler wires `Transcode` into
//! its pipelines, and you implement the business logic in `handle`.

use crate::state::AppState;

/// Business logic for the `Transcode` step.
///
/// Capability bindings:
/// - db: default
/// - cache: default
#[derive(Debug)]
pub struct Transcode<'a> {
    pub db: &'a sqlx::PgPool,
    pub cache: &'a redis::Client,
}

impl<'a> Transcode<'a> {
    pub fn new(state: &'a AppState) -> Self {
        Self {
            db: &state.db,
            cache: &state.cache,
        }
    }

    pub async fn handle(&self, payload: serde_json::Value) -> anyhow::Result<serde_json::Value> {
        // TODO: implement the Transcode step.
        Ok(payload)
    }
}
============================================================
src/state.rs
============================================================
//! Shared application state. Generated by CIaC.

use crate::config::Config;

#[derive(Debug, Clone)]
pub struct AppState {
    pub config: Config,
    /// Lazy pool: connections are established on first use, so the server
    /// starts (and compiles) without a running database.
    pub db: sqlx::PgPool,
    pub cache: redis::Client,
    pub queue: async_nats::Client,
}

impl AppState {
    pub async fn new(config: Config) -> anyhow::Result<Self> {
        let db = sqlx::postgres::PgPoolOptions::new().connect_lazy(&config.database_url)?;
        let cache = redis::Client::open(config.redis_url.as_str())?;
        let queue = async_nats::connect(&config.nats_url).await?;
        Ok(Self {
            config,
            db,
            cache,
            queue,
        })
    }
}
============================================================
src/workers/mod.rs
============================================================
//! Queue-driven workers. Generated by CIaC.
//!
//! Run them all with `cargo run --bin workers`.

pub mod transcoder;
============================================================
src/workers/transcoder.rs
============================================================
//! Worker pipeline for `worker Transcoder`. Generated by CIaC.
//!
//! Consumes `video_platform.events` in queue group `transcoder`
//! so replicas of this worker load-balance messages between them.

use futures::StreamExt;
use futures::future::try_join_all;

use crate::services::transcode::Transcode;
use crate::services::save_result::SaveResult;
use crate::state::AppState;

pub const SUBJECT: &str = "video_platform.events";
pub const QUEUE_GROUP: &str = "transcoder";
pub const CONCURRENCY: usize = 1;
pub const MAX_RETRIES: u32 = 0;

pub async fn run(state: AppState) -> anyhow::Result<()> {
    let tasks = (0..CONCURRENCY).map(|worker_index| {
        let state = state.clone();
        tokio::spawn(async move { consume(state, worker_index).await })
    });
    for result in try_join_all(tasks).await? {
        result?;
    }
    Ok(())
}

async fn consume(state: AppState, worker_index: usize) -> anyhow::Result<()> {
    let mut subscription = state
        .queue
        .queue_subscribe(SUBJECT, QUEUE_GROUP.to_owned())
        .await?;
    tracing::info!(subject = SUBJECT, worker_index, "worker Transcoder consuming");
    while let Some(message) = subscription.next().await {
        let payload: serde_json::Value = match serde_json::from_slice(&message.payload) {
            Ok(payload) => payload,
            Err(err) => {
                tracing::warn!(?err, "discarding malformed message");
                continue;
            }
        };
        if let Err(err) = handle_message(&state, payload).await {
            tracing::error!(?err, "message processing failed after retries");
        }
    }
    Ok(())
}



async fn handle_message(state: &AppState, payload: serde_json::Value) -> anyhow::Result<()> {
    for attempt in 0..=MAX_RETRIES {
        match handle_message_once(state, payload.clone()).await {
            Ok(()) => return Ok(()),
            Err(err) if attempt < MAX_RETRIES => {
                tracing::warn!(?err, attempt, "message processing failed; retrying");
            }
            Err(err) => return Err(err),
        }
    }
    Ok(())
}

async fn handle_message_once(state: &AppState, payload: serde_json::Value) -> anyhow::Result<()> {
    let result = payload;

    let result = Transcode::new(state).handle(result).await?;
    let result = SaveResult::new(state).handle(result).await?;
    let _ = result;
    Ok(())
}
